--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -1,19 +1,19 @@
-@import "../global/variables.scss";
+@use "../global/variables.scss";
 
 .nav {
-  @media (max-width: $width-mobile) {
+  @media (max-width: variables.$width-mobile) {
     position: relative;
   }
 }
 
 .nav--closed .nav__list {
-  @media (max-width: $width-mobile) {
+  @media (max-width: variables.$width-mobile) {
     display: none;
   }
 }
 
 .nav--opened .nav__list {
-  @media (max-width: $width-mobile) {
+  @media (max-width: variables.$width-mobile) {
     position: absolute;
     top: 0;
     left: 0;
@@ -23,7 +23,7 @@
 }
 
 .nav--nojs .nav__list {
-  @media (max-width: $width-mobile) {
+  @media (max-width: variables.$width-mobile) {
     position: static;
     display: block;
   }
