--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,37 +1,37 @@
 /* GLOBAL */
-@import "./global/fonts.scss";
-@import "./global/global.scss";
-@import "./global/variables.scss";
-@import "./global/visually-hidden.scss";
+@use "./global/fonts.scss";
+@use "./global/global.scss";
+@use "./global/variables.scss";
+@use "./global/visually-hidden.scss";
 
 /* BLOCKS */
-@import "./blocks/toggle.scss";
-@import "./blocks/button.scss";
-@import "./blocks/badge.scss";
-@import "./blocks/title.scss";
-@import "./blocks/title-small.scss";
-@import "./blocks/header.scss";
-@import "./blocks/nav.scss";
-@import "./blocks/user-list.scss";
-@import "./blocks/site-list.scss";
-@import "./blocks/page.scss";
-@import "./blocks/main-container.scss";
-@import "./blocks/slider.scss";
-@import "./blocks/slider-pagination.scss";
-@import "./blocks/slider-button.scss";
-@import "./blocks/features.scss";
-@import "./blocks/catalog.scss";
-@import "./blocks/form.scss";
-@import "./blocks/range.scss";
-@import "./blocks/number.scss";
-@import "./blocks/radio.scss";
-@import "./blocks/checkbox.scss";
-@import "./blocks/products.scss";
-@import "./blocks/pagination.scss";
-@import "./blocks/map.scss";
-@import "./blocks/footer.scss";
-@import "./blocks/social.scss";
-@import "./blocks/menu.scss";
-@import "./blocks/media.scss";
-@import "./blocks/contacts.scss";
-@import "./blocks/copyright.scss";
+@use "./blocks/toggle.scss";
+@use "./blocks/button.scss";
+@use "./blocks/badge.scss";
+@use "./blocks/title.scss";
+@use "./blocks/title-small.scss";
+@use "./blocks/header.scss";
+@use "./blocks/nav.scss";
+@use "./blocks/user-list.scss";
+@use "./blocks/site-list.scss";
+@use "./blocks/page.scss";
+@use "./blocks/main-container.scss";
+@use "./blocks/slider.scss";
+@use "./blocks/slider-pagination.scss";
+@use "./blocks/slider-button.scss";
+@use "./blocks/features.scss";
+@use "./blocks/catalog.scss";
+@use "./blocks/form.scss";
+@use "./blocks/range.scss";
+@use "./blocks/number.scss";
+@use "./blocks/radio.scss";
+@use "./blocks/checkbox.scss";
+@use "./blocks/products.scss";
+@use "./blocks/pagination.scss";
+@use "./blocks/map.scss";
+@use "./blocks/footer.scss";
+@use "./blocks/social.scss";
+@use "./blocks/menu.scss";
+@use "./blocks/media.scss";
+@use "./blocks/contacts.scss";
+@use "./blocks/copyright.scss";
