--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,7 +1,7 @@
-@import "../global/variables.scss";
+@use "../global/variables.scss";
 
 .catalog {
-  background-color: $lightest-grey;
+  background-color: variables.$lightest-grey;
 }
 
 .catalog__wrapper {
@@ -10,11 +10,11 @@
   margin: 0 auto;
   padding: 50px 20px 43px;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     padding: 80px 20px 89px;
   }
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     display: grid;
     grid-template: repeat(2, min-content) / 318px auto;
     grid-template-areas: "text text" "form products";
@@ -29,7 +29,7 @@
   flex-direction: column;
   margin: 0 0 21px;
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     grid-area: text;
     margin: 0;
   }
@@ -47,11 +47,11 @@
 .catalog__form {
   margin: 0 0 36px;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     margin: 0 0 40px;
   }
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     margin: 0;
     padding: 5px 0 0;
     grid-area: form;
