--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,4 +1,4 @@
-@import "../global/variables.scss";
+@use "../global/variables.scss";
 
 .copyright {
   display: flex;
@@ -6,7 +6,7 @@
   align-items: center;
   padding: 20px 20px 30px;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     padding: 0;
   }
 }
@@ -15,7 +15,7 @@
   margin: 0 5px 0 0;
   font-size: 12px;
   line-height: 16px;
-  color: $base-grey;
+  color: variables.$base-grey;
 }
 
 .copyright__link {
@@ -24,29 +24,28 @@
   align-items: center;
   font-size: 12px;
   line-height: 16px;
-  color: $base-grey;
+  color: variables.$base-grey;
 
   &:hover,
   &:focus-visible {
-    color: $base-primary;
+    color: variables.$base-primary;
   }
 
   &:active {
-    color: $primary-darker;
+    color: variables.$primary-darker;
   }
 }
 
 .copyright__link:hover .copyright__icon,
 .copyright__link:focus-visible .copyright__icon {
-  color: $base-primary;
+  color: variables.$base-primary;
 }
 
 .copyright__link:active .copyright__icon {
-  color: $primary-darker;
+  color: variables.$primary-darker;
 }
-
 
 .copyright__icon {
   margin: 0 0 0 5px;
-  color: $base-grey;
+  color: variables.$base-grey;
 }
