--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,4 +1,5 @@
-@import "../global/variables.scss";
+@use "../global/variables.scss";
+@use "../global/mixins.scss";
 
 .features__wrapper {
   display: flex;
@@ -7,11 +8,11 @@
   margin: 0 auto;
   padding: 50px 20px 60px;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     padding: 60px 20px 99px;
   }
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     width: 1440px;
     padding: 100px 40px 119px;
   }
@@ -21,7 +22,7 @@
   margin: 0 0 5px;
   order: -1;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     margin: 0 0 4px;
   }
 }
@@ -30,30 +31,28 @@
   margin: 0 0 36px;
   text-align: center;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     margin: 0 0 61px;
   }
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     margin: 0 0 81px;
   }
 }
 
 .features__list {
+  @include mixins.list-reset;
   display: flex;
   flex-direction: column;
   gap: 32px 0;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     display: grid;
     grid-template-columns: repeat(2, 339px);
     gap: 50px 30px;
   }
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     grid-template-columns: repeat(4, 318px);
   }
 }
@@ -94,7 +93,7 @@
     }
   }
 
-  @media (min-width: $width-tablet) and (max-width: $width-tablet-max) {
+  @media (min-width: variables.$width-tablet) and (max-width: variables.$width-tablet-max) {
     position: relative;
     align-items: flex-start;
     padding: 0 0 0 72px;
@@ -106,7 +105,7 @@
     }
   }
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     &::before {
       margin: 0 0 20px;
     }
@@ -119,7 +118,7 @@
   line-height: 32px;
   font-weight: 700;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     margin: 0 0 10px;
     font-size: 24px;
     line-height: 36px;
@@ -132,13 +131,13 @@
   line-height: 20px;
   text-align: center;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     font-size: 16px;
     line-height: 24px;
     text-align: left;
   }
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     text-align: center;
   }
 }
