--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,4 +1,4 @@
-@import "../global/variables.scss";
+@use "../global/variables.scss";
 
 .header__wrapper {
   display: grid;
@@ -6,16 +6,16 @@
   grid-template-areas: "logo user" "site site";
   min-height: 60px;
   margin: 0 auto;
-  background-color: $base-white;
+  background-color: variables.$base-white;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     grid-template-columns: auto 1fr 180px;
     grid-template-areas: "logo site user";
     padding: 0 20px;
     min-height: 80px;
   }
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     grid-template-columns: 335px 1fr 280px;
     gap: 0 20px;
     width: 1440px;
@@ -33,7 +33,7 @@
 .header__logo-link {
   padding: 12px 20px;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     padding: 0;
   }
 }
@@ -49,7 +49,7 @@
   line-height: 16px;
   margin: 0;
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     display: inline;
   }
 }
@@ -57,12 +57,12 @@
 .header__nav {
   grid-area: site;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     justify-self: center;
     margin: 0 0 0 67px;
   }
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     margin: 0;
   }
 }
