--- a/source/sass/blocks/number.scss
+++ b/source/sass/blocks/number.scss
@@ -1,4 +1,4 @@
-@import "../global/variables.scss";
+@use "../global/variables.scss";
 
 .number {
   display: flex;
@@ -15,7 +15,7 @@
     margin: auto;
     width: 8px;
     height: 2px;
-    background-color: $base-grey;
+    background-color: variables.$base-grey;
   }
 }
 
@@ -29,34 +29,34 @@
   text-align: center;
   border: none;
   border-radius: 4px;
-  background-color: $base-white;
+  background-color: variables.$base-white;
   color: inherit;
-  box-shadow: inset 0 0 0 2px $primary-lighter;
+  box-shadow: inset 0 0 0 2px variables.$primary-lighter;
   appearance: textfield;
   cursor: pointer;
 
-  @media (min-width: $width-tablet) {
+  @media (min-width: variables.$width-tablet) {
     width: 87px;
   }
 
-  @media (min-width: $width-desktop) {
+  @media (min-width: variables.$width-desktop) {
     width: 134px;
   }
 
   &:hover,
   &:focus-visible {
-    box-shadow: inset 0 0 0 2px $primary-darker;
+    box-shadow: inset 0 0 0 2px variables.$primary-darker;
     outline: none;
   }
 
   &:disabled {
-    background-color: $lightest-grey;
-    box-shadow: inset 0 0 0 2px $light-grey;
+    background-color: variables.$lightest-grey;
+    box-shadow: inset 0 0 0 2px variables.$light-grey;
     cursor: not-allowed;
   }
 
   &::placeholder {
-    color: $base-grey;
+    color: variables.$base-grey;
   }
 }
 
