--- a/source/sass/blocks/range.scss
+++ b/source/sass/blocks/range.scss
@@ -1,4 +1,4 @@
-@import "../global/variables.scss";
+@use "../global/variables.scss";
 
 .range {
   display: flex;
@@ -10,17 +10,17 @@
   position: relative;
   height: 2px;
   width: 100%;
-  background-color: $light-grey;
+  background-color: variables.$light-grey;
 }
 
 .range__bar {
   position: absolute;
   top: -1px;
   height: 4px;
-  background-color: $primary-lighter;
+  background-color: variables.$primary-lighter;
 
   &--disabled {
-    background-color: $base-grey;
+    background-color: variables.$base-grey;
   }
 }
 
@@ -31,8 +31,8 @@
   height: 24px;
   border: none;
   border-radius: 50%;
-  background-color: $base-white;
-  box-shadow: inset 0 0 0 2px $primary-lighter;
+  background-color: variables.$base-white;
+  box-shadow: inset 0 0 0 2px variables.$primary-lighter;
   cursor: pointer;
 
   &::before {
@@ -63,21 +63,21 @@
     outline: none;
 
     &::before {
-      background-color: $primary-opacity;
+      background-color: variables.$primary-opacity;
     }
   }
 
   &:active {
-    box-shadow: inset 0 0 0 2px $primary-darker;
+    box-shadow: inset 0 0 0 2px variables.$primary-darker;
 
     &::before {
-      background-color: $primary-lighter;
+      background-color: variables.$primary-lighter;
     }
   }
 
   &:disabled {
-    background-color: $lightest-grey;
-    box-shadow: inset 0 0 0 2px $base-grey;
+    background-color: variables.$lightest-grey;
+    box-shadow: inset 0 0 0 2px variables.$base-grey;
     cursor: not-allowed;
   }
 }
