--- a/source/sass/blocks/title-small.scss
+++ b/source/sass/blocks/title-small.scss
@@ -1,4 +1,4 @@
-@import "../global/variables.scss";
+@use "../global/variables.scss";
 
 .title-small {
   margin: 0;
@@ -6,5 +6,5 @@
   font-weight: 700;
   line-height: 20px;
   letter-spacing: 0.28px;
-  color: $base-primary;
+  color: variables.$base-primary;
 }
